--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <script src="https://kit.fontawesome.com/77e7a2e9c6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div class="container">
-        <aside></aside>
+        <aside>
+            <h1><a href="#"><i class="fa-solid fa-table-cells-large"></i>Dashboard</a></h1>
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-house"></i>Home</a></li>
+                <li><a href="#"><i class="fa-regular fa-address-card"></i>Profile</a></li>
+                <li><a href="#"><i class="fa-solid fa-message"></i>Messages</a></li>
+                <li><a href="#"><i class="fa-solid fa-clock"></i>History</a></li>
+                <li><a href="#"><i class="fa-solid fa-copy"></i>Tasks</a></li>
+                <li><a href="#"><i class="fa-solid fa-users"></i>Communities</a></li>
+            </ul>
+
+            <ul>
+                <li><a href="#"><i class="fa-solid fa-gear"></i>Settings</a></li>
+                <li><a href="#"><i class="fa-solid fa-circle-question"></i>Support</a></li>
+                <li><a href="#"><i class="fa-solid fa-shield-blank"></i>Privacy</a></li>
+            </ul>
+        </aside>
         <header></header>
         <main></main>
     </div>
