--- a/index.html
+++ b/index.html
@@ -50,7 +50,46 @@
                 <button type="button">Share</button>
             </div>
         </header>
-        <main></main>
+
+        <main>
+            <section class="projects">
+                <h2>Your Projects</h2>
+                <div class="projects-container">
+                    <article>
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mi ex, consectetur eget felis sed, interdum molestie metus. Praesent quis fringilla quam, non vehicula nisl.</p>
+                    </article>
+                    <article>
+                        <h3>Less Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mi ex, consectetur eget felis sed, interdum molestie metus. Praesent quis fringilla quam, non vehicula nisl.</p>
+                    </article>
+                    <article>
+                        <h3>Impossible App</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mi ex, consectetur eget felis sed, interdum molestie metus. Praesent quis fringilla quam, non vehicula nisl.</p>
+                    </article>
+                    <article>
+                        <h3>Easy Peasy App</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mi ex, consectetur eget felis sed, interdum molestie metus. Praesent quis fringilla quam, non vehicula nisl.</p>
+                    </article>
+                    <article>
+                        <h3>Ad Blocker</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mi ex, consectetur eget felis sed, interdum molestie metus. Praesent quis fringilla quam, non vehicula nisl.</p>
+                    </article>
+                    <article>
+                        <h3>Money Maker</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse mi ex, consectetur eget felis sed, interdum molestie metus. Praesent quis fringilla quam, non vehicula nisl.</p>
+                    </article>
+                </div>
+            </section>
+
+            <section>
+                <h2>Announcements</h2>
+            </section>
+            
+            <section>
+                <h2>Trending</h2>
+            </section>
+        </main>
     </div>
 </body>
 </html>
